1.19 initial Json templates